# dynamic_multiplex

./: .gitignore  BRANCH_AUDIT_REPORT.txt  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: python-package.yml
bayesnet/: DESCRIPTION
manuscript/: 01_synthetic_experiments.R  02_empirical_application.R  run_pipeline.sh
python_code/: .gitignore  README.md  pyproject.toml  requirements.txt
python_code/scripts/: manuscript_simulation_benchmark.py
python_code/src/bayesnet_py/: __init__.py  benchmark.py  fit.py  multilayer_utils.py  simulation.py
python_code/src/dynamic_multiplex/: __init__.py  bootstrap_multilayer.py  fit_multilayer_identity_ties.py  fit_multilayer_jaccard.py  fit_multilayer_overlap.py  fit_multilayer_weighted_jaccard.py  fit_multilayer_weighted_overlap.py  multilayer_utils.py  simulate_multiplex_layers.py
python_code/tests/: test_audit_verification.py  test_benchmark.py  test_bootstrap.py  test_multilayer.py  test_node_alignment_and_seed.py  test_simulation.py
r_code/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
r_code/R/: benchmark_dynamic_models.R  bootstrap_multilayer.R  fit_multilayer_identity_ties.R  fit_multilayer_jaccard.R  fit_multilayer_overlap.R  fit_multilayer_weighted_jaccard.R  fit_multilayer_weighted_overlap.R  multilayer_utils.R  plot_multilayer_visualizations.R  simulate_and_fit_multilayer.R  (+1 more)
scripts/: benchmark_python.py  benchmark_r.R  run_benchmarks.sh
slurm/: 01_python_benchmarks.sh  02_synthetic_experiments.sh  03_empirical_application.sh  run_all.sh
(+9 files in other folders)
