[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bayesnet-py"
version = "0.1.0"
description = "Multilayer community detection and interlayer tie modeling for evolving networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jared Edgerton", email = "jared.edgerton@gmail.com"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "igraph>=0.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/bayesnet_py"]
